--- a/k8s-service.yaml
+++ b/k8s-service.yaml
@@ -6,7 +6,6 @@ spec:
   selector:
     app: spring-boot-k8s
   ports:
-    - protocol: "TCP"
-      port: 8080 # The port that the service is running on in the cluster
-      targetPort: 8080 # The port exposed by the service
-  type: NodePort # type of the service.
+    - port: 80
+      targetPort: 8080
+  type: LoadBalancer # type of the service.
