--- a/k8s-service.yaml
+++ b/k8s-service.yaml
@@ -1,11 +1,11 @@
-apiVersion: v1 # Kubernetes API version
-kind: Service # Kubernetes resource kind we are creating
-metadata: # Metadata of the resource kind we are creating
-  name: springboot-k8s-svc
+apiVersion: v1
+kind: Service
+metadata:
+  name: jhooq-springboot
 spec:
-  selector:
-    app: spring-boot-k8s
+  type: LoadBalancer
   ports:
     - port: 80
       targetPort: 8080
-  type: LoadBalancer # type of the service.
+  selector:
+    app: jhooq-springboot
