--- a/k8s-deployment.yaml
+++ b/k8s-deployment.yaml
@@ -20,3 +20,15 @@ spec:
           env:
             - name: PORT
               value: "8080"
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: jhooq-springboot
+spec:
+  type: LoadBalancer
+  ports:
+    - port: 80
+      targetPort: 8080
+  selector:
+    app: jhooq-springboot
