--- a/k8s-deployment.yaml
+++ b/k8s-deployment.yaml
@@ -1,20 +1,34 @@
 apiVersion: apps/v1
-kind: Deployment # Kubernetes resource kind we are creating
+kind: Deployment
 metadata:
-  name: spring-boot-k8s
+  name: jhooq-springboot
 spec:
+  replicas: 3
   selector:
     matchLabels:
-      app: spring-boot-k8s
-  replicas: 2 # Number of replicas that will be created for this deployment
+      app: jhooq-springboot
   template:
     metadata:
       labels:
-        app: spring-boot-k8s
+        app: jhooq-springboot
     spec:
       containers:
-        - name: spring-boot-k8s
-          image: dutta:1.0 # Image that will be used to containers in the cluster
-          imagePullPolicy: IfNotPresent
+        - name: springboot
+          image: muskan0802/jhooq-docker-demo:jhooq-docker-demo
           ports:
-            - containerPort: 8080 # The port that the container is running on in the cluster
+            - containerPort: 8080
+          env:
+            - name: PORT
+              value: "8080"
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: jhooq-springboot
+spec:
+  type: LoadBalancer
+  ports:
+    - port: 80
+      targetPort: 8080
+  selector:
+    app: jhooq-springboot
